--- a/styles.css
+++ b/styles.css
@@ -9,4 +9,12 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-color: hsl(257, 40%, 49%);
+    padding: 64px 0;
 }
+
+.page{
+    max-width: 1440px;
+    height: 100%;
+    margin: auto;
+}
+
