--- a/styles.css
+++ b/styles.css
@@ -16,5 +16,51 @@ body{
     max-width: 1440px;
     height: 100%;
     margin: auto;
+    display: grid;
+    grid-template-rows: 64px 1fr 64px;
 }
 
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+}
+
+.container-action{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 8%;
+    height: 100%;
+    
+}
+
+.container-action h1{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 2.5rem;
+    color: #fff;
+}
+
+.container-action p{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 1rem;
+    color: #fff;
+    padding: 16px 0;
+}
+.container-action button{
+    width: 200px;
+    height: 60px;
+    background-color: #fff;
+    border: none;
+    border-radius: 32px;
+    padding: 16px 32px;
+    font-family: 'open sans', sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    color: hsl(257, 40%, 49%);
+    cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    
+}
