--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+a{
+    text-decoration: none;
+}
+
 body{
     height: 100vh;
     background-image: url(./images/bg-desktop.svg);
@@ -63,4 +68,22 @@ main{
     color: hsl(257, 40%, 49%);
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    
+}
+
+footer{
+    display: flex;
+    justify-content: end;
+    gap: 16px;
+}
+
+footer a{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    color: #fff;
+    cursor: pointer;
 }
