--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,8 @@ main{
     font-size: 1rem;
     color: hsl(257, 40%, 49%);
     cursor: pointer;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.4s;    
 }
 
 footer{
@@ -86,4 +87,15 @@ footer a{
     border: 1px solid #fff;
     color: #fff;
     cursor: pointer;
+    transition: 0.4s;
+}
+
+.container-action button:hover{
+    background-color: hsl(300, 69%, 71%);
+    color: #fff;
+}
+
+footer a:hover{
+    border-color: hsl(300, 69%, 71%);
+    color: hsl(300, 69%, 71%);
 }
