--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@ body {
     background-size: cover;
     background-color: hsl(257, 40%, 49%);
     padding: 64px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .page {
